# beast-issue-1830

./: CMakeLists.txt  README.md
correct/: main.cpp
wrong/: main.cpp
